CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
PROJECT(gl3w C)

FIND_PACKAGE(PythonInterp 2.6 REQUIRED)
EXECUTE_PROCESS(COMMAND ${PYTHON_EXECUTABLE} ${CMAKE_CURRENT_SOURCE_DIR}/gl3w_gen.py
                WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR})

INCLUDE_DIRECTORIES(${CMAKE_CURRENT_BINARY_DIR}/include)

ADD_LIBRARY(gl3w ${CMAKE_CURRENT_BINARY_DIR}/src/gl3w.c)
IF(UNIX)
  TARGET_LINK_LIBRARIES(gl3w dl)
ENDIF()

ADD_EXECUTABLE(gl3w_test ${CMAKE_CURRENT_SOURCE_DIR}/src/test.c)
TARGET_LINK_LIBRARIES(gl3w_test gl3w glut GL)
ADD_TEST(NAME gl3w_test COMMAND gl3w_test)

SET(OPENGL_INCLUDE_DIR ${CMAKE_CURRENT_BINARY_DIR}/include)
