CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
PROJECT(gl3w C)

FIND_PACKAGE(PythonInterp 2.6 REQUIRED)
EXECUTE_PROCESS(COMMAND ${PYTHON_EXECUTABLE} 
    ${CMAKE_CURRENT_SOURCE_DIR}/gl3w_gen.py
    WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR})
    INCLUDE_DIRECTORIES(${CMAKE_CURRENT_BINARY_DIR}/include
)
ADD_LIBRARY(gl3w ${CMAKE_CURRENT_BINARY_DIR}/src/gl3w.c)
IF(UNIX)
    TARGET_LINK_LIBRARIES(gl3w dl)
ENDIF()

SET(GL3W_FOUND)
SET(GL3W_INCLUDE_DIRS ${CMAKE_CURRENT_BINARY_DIR}/include)
SET(GL3W_LIBRARY gl3w)
